--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Trabajo Practico N°1</title>
   </head>
   <body>
-    <script src="js/tp1Ejercicio1.js"></script>
+    <script src="js/ejercicio1.js"></script>
   </body>
 </html>
