--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <meta name="description" content="Trabajo Practico de JavaScript" />
     <meta name="author" content="Iván Silva" />
     <meta name="keywords" content="JavaScript" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Trabajo Practico N°1</title>
   </head>
   <body>
+    <script src="js/ejercicio1.js"></script>
+    <script src="js/ejercicio2.js"></script>
+    <script src="js/ejercicio3.js"></script>
+    <script src="js/ejercicio4.js"></script>
+    <script src="js/ejercicio5.js"></script>
+    <script src="js/ejercicio6.js"></script>
+    <script src="js/ejercicio7.js"></script>
+    <script src="js/ejercicio8.js"></script>
+    <script src="js/ejercicio9.js"></script>
+    <script src="js/ejercicio10.js"></script>
     <script src="js/ejercicio11.js"></script>
   </body>
 </html>
